--- a/src/components/styles/Header.module.css
+++ b/src/components/styles/Header.module.css
@@ -102,6 +102,13 @@
   color: var(--white);
 }
 
+.hamburger-menu {
+  position: absolute !important;
+  left: 0;
+  margin-left: 2rem;
+  display: none;
+}
+
 @media (max-width: 768px) {
   .header-navigation {
     display: none;
@@ -118,5 +125,8 @@
   }
   .logo-name {
     font-size: 0.8rem;
+  }
+  .hamburger-menu {
+    display: flex;
   }
 }
