--- a/src/components/styles/ProjectDetail.module.css
+++ b/src/components/styles/ProjectDetail.module.css
@@ -12,16 +12,44 @@
 
 .description-section-container {
     background-color: var(--white);
-    height: 750px;
+    padding: 0;
 }
 
 .description-wrapper {
-    padding: 5rem;
+    padding: 7rem 5rem 9rem 5rem;
     margin: auto;
-    width: 80%;
-    max-width: 1000px;
+    max-width: 1400px;
 }
 
 .title-text {
     font-family: GothamBold;
+}
+
+.description-subtitle {
+    display: grid;
+    grid-template-columns: 1fr 0.8fr;
+    grid-column-gap: 5rem;
+    margin-top: 4rem;
+    line-height: 2rem;
+}
+
+.role-title {
+    font-family: GothamBold;
+}
+
+.button-container {
+    display: flex;
+    margin-top: 4rem;
+}
+
+.prototype-button {
+    text-decoration: none;
+    border-radius: 5px;
+    color: var(--white);
+    padding: 1rem;
+    padding-bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
 }
