--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@
   --primarytext: #f4d2d3 !important;
   --secondarytext: #f4d2d3 !important;
   --white: #fff !important;
+  --black: #000 !important;
 }
 
 @font-face {
