--- a/src/components/styles/ProjectDetail.module.css
+++ b/src/components/styles/ProjectDetail.module.css
@@ -2,11 +2,12 @@
   height: 500px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .image-container {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -16,7 +17,7 @@
 }
 
 .description-wrapper {
-  padding: 7rem 5rem 9rem 5rem;
+  padding: 1.5rem;
   margin: auto;
   max-width: 1400px;
 }
@@ -27,9 +28,9 @@
 
 .description-subtitle {
   display: grid;
-  grid-template-columns: 1fr 0.8fr;
-  grid-column-gap: 5rem;
-  margin-top: 4rem;
+  grid-template-rows: 0.5fr 0.5fr;
+  grid-row-gap: 2rem;
+  margin-top: 2rem;
   line-height: 2rem;
 }
 
@@ -47,12 +48,11 @@
   border-radius: 5px;
   color: var(--white);
   text-align: center;
-  padding: 1rem;
   padding-bottom: 0;
   display: flex;
   justify-content: center;
+  background-color: black;
   align-items: center;
-  margin-right: 1rem;
   transition: all 0.2s ease-in-out;
 }
 
@@ -98,7 +98,20 @@
 .button-container-app {
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.button-container-app>a {
+  margin-right: 0rem;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 1rem;
+}
+
+.button-container-app>a:last-child {
+  margin-right: 0rem;
 }
 
 .website-button {
@@ -112,10 +125,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 1.9rem;
-  margin-top: 1.2rem;
   transition: all 0.2s ease-in-out;
-  margin-left: 1rem;
 }
 
 .website-button:focus,
@@ -123,6 +133,10 @@
   text-decoration: none;
   color: var(--white);
   transform: scale(1.05);
+}
+
+.hr--medium {
+  margin: 2rem 0;
 }
 
 @media (max-width: 1200px) {
@@ -138,14 +152,57 @@
   }
 }
 
-@media (min-width: 1200px) {
-  .button-container-app {
-    flex-direction: row;
+@media (min-width: 575px) {
+  .image-container {
+    padding: 2rem;
   }
+  .button-container-app {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: 0.5fr 0.5fr;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+  }
+  .button-container-app>a {
+    margin-bottom: 0rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .button-container-app {
+    display: grid;
+    grid-template-columns: 0.25fr 0.25fr 0.25fr 0.25fr;
+    grid-template-rows: 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
+  }
+  .description-wrapper {
+    padding: 3rem;
+  }
+}
+
+@media (min-width: 1200px) {
   .landing-section-container {
     padding: 3rem;
   }
   .landing-section-container {
     height: 750px;
+  }
+  .description-wrapper {
+    padding: 4rem;
+  }
+  .description-subtitle {
+    grid-template-columns: 1fr 0.8fr;
+    grid-column-gap: 5rem;
+    margin-top: 4rem;
+    grid-template-rows: 1fr;
+    grid-row-gap: 0;
+  }
+  .button-container-app {
+    display: grid;
+    grid-template-columns: 0.25fr 0.25fr 0.25fr 0.25fr;
+    grid-template-rows: 1fr;
+    row-gap: 2rem;
+    column-gap: 2rem;
   }
 }
