--- a/src/components/styles/ProjectDetail.module.css
+++ b/src/components/styles/ProjectDetail.module.css
@@ -34,6 +34,7 @@
   grid-row-gap: 2rem;
   margin-top: 2rem;
   line-height: 2rem;
+  font-size: .8rem;
 }
 
 .role-title {
@@ -184,6 +185,9 @@
   .title-text {
     text-align: left;
     font-size: 40px;
+  }
+  .description-subtitle {
+    font-size: 1rem;
   }
 }
 
