--- a/src/pages/styles/seyebot.module.css
+++ b/src/pages/styles/seyebot.module.css
@@ -1,1 +1,23 @@
+.seye-bot-graph-container {
+    background-color: var(--primary);
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem 0;
+}
 
+.seye-bot-graph-container>h1 {
+    color: var(--primarytext);
+    font-family: GothamBold;
+    text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.seye-bot-graph {
+    height: 450px;
+    width: 640px;
+}
