--- a/src/components/styles/ci-calculator.module.css
+++ b/src/components/styles/ci-calculator.module.css
@@ -1,29 +1,17 @@
 
 .ci-container {
-  margin: 0 auto 2rem auto;
+  margin: 0 auto;
   font-family: Gotham;
+  padding: 0 1rem;
 }
 
 .text-center {
   color: var(--primarytext);
   font-family: GothamBold;
   text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
-  font-size: 3rem;
+  font-size: 1.5rem;
   text-align: center;
-  margin-bottom: 2rem;
-}
-
-.ci-container>h1,
-.ci-container>h2 {
-  margin-top: 0;
-}
-
-.ci-container>h1 {
-  margin-bottom: 24px;
-}
-
-.ci-container>h2 {
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 .variables-container {
@@ -53,35 +41,38 @@
 
 .label {
   display: block;
-  margin-bottom: 16px;
-  color: white;
-  margin-left: 1rem;
+  color: var(--white);
+  margin: .5rem;
+  font-size: .8rem;
+  text-align: center;
 }
 
-.label:first-child {
-  display: block;
-  margin-bottom: 16px;
-  color: white;
-  margin-left: 0rem;
+.button-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
 }
 
 .button[type="button"] {
   cursor: pointer;
-  background-color: #4caf50;
+  background-color: var(--secondary);
   border: none;
   border-radius: 4px;
-  color: white;
+  color: var(--white);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 .flex {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 #annualCompoundCalculator {
@@ -91,5 +82,115 @@
 }
 
 .chart-title {
-  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+  color: var(--primarytext);
+  font-family: GothamBold;
+  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+}
+
+.summary-table {
+  width: 100%;
+  color: var(--white);
+  border-collapse: collapse;
+}
+
+.summary-table>tbody>tr>th,
+.summary-table>tbody>tr>td {
+  text-align: inherit;
+  padding: 0.75rem;
+  border-top: 1px solid #dee2e6;
+  vertical-align: top;
+}
+
+.summary-table>tbody>tr>th,
+.summary-table>tbody>tr>td {
+  text-align: inherit;
+  padding: 0.75rem;
+  border-top: 1px solid #dee2e6;
+  vertical-align: top;
+}
+
+.summary-table>thead>tr>th {
+  background-color: var(--secondary);
+  vertical-align: bottom;
+  padding: 0.75rem;
+}
+
+.summary-title {
+  font-size: 1.2rem;
+  text-align: center;
+  color: var(--primarytext);
+  font-family: GothamBold;
+  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+}
+
+.breakdown-title {
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  color: var(--primarytext);
+  font-family: GothamBold;
+  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+}
+
+.summary-content {
+  color: var(--white);
+  text-align: center;
+}
+
+@media (min-width: 1024px) {
+  .ci-container {
+    padding: 0 2rem;
+  }
+
+.text-center {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+.label {
+  margin: 0 0 16px 3rem;
+  font-size: 1rem;
+  text-align: left;
+}
+
+.label:first-child {
+  margin: 0 0 16px 0;
+}
+
+.button[type="button"] {
+  font-size: 16px;
+}
+
+.chart-title {
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+.summary-table {
+  width: 75%;
+}
+
+.button-container {
+  justify-content: flex-start;
+  margin-top: 0;
+}
+
+.summary-title {
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+.breakdown-title {
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+.summary-content {
+  text-align: left;
+}
+
+
 }
