--- a/public/styles.css
+++ b/public/styles.css
@@ -22,6 +22,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(22, 28, 45, 0);
+  scroll-behavior: smooth;
 }
 
 footer,
