--- a/src/components/styles/ci-calculator.module.css
+++ b/src/components/styles/ci-calculator.module.css
@@ -57,7 +57,7 @@
 
 .button[type="button"] {
   cursor: pointer;
-  background-color: var(--secondary);
+  background-color: #DF678C;
   border: none;
   border-radius: 4px;
   color: var(--white);
