--- a/src/components/styles/Contact.module.css
+++ b/src/components/styles/Contact.module.css
@@ -4,12 +4,16 @@
   padding-left: 20px;
   margin-right: auto;
   margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  flex-direction: column;
 }
 
 .contact-container {
   background-color: var(--primarytext);
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .contact-header {
@@ -41,6 +45,19 @@
   bottom: 0;
   -webkit-transform: scaleX(-1) scaleY(-1);
   transform: scaleX(-1) scaleY(-1);
+}
+
+.seye-social-icon {
+  margin-top: 1rem;
+}
+
+.seye-social-icon>a {
+  margin: 0 1rem;
+}
+
+.seye-social-icon>a>svg:hover {
+  transform: scale(1.2);
+  transition: transform 330ms ease-in-out;
 }
 
 @media (max-width: 900px) {
