--- a/src/components/styles/LandingSection.module.css
+++ b/src/components/styles/LandingSection.module.css
@@ -1,5 +1,58 @@
 .welcome-container {
   background-color: var(--primary);
+  background-image: url('../../../public/images/bg.png');
+  /* cursor: pointer; */
+  background-size: cover;
+  background-position: center;
+  padding-top: 145px;
+}
+
+.about-container {
+  background-color: var(--primary);
+  width: 100%;
+  padding: 3rem;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.about-side-top-right {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.about-side-top-left {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.about-side-bottom-right {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  -webkit-transform: scaleY(-1);
+  transform: scaleY(-1);
+}
+
+.about-side-bottom-left {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  -webkit-transform: scaleX(-1) scaleY(-1);
+  transform: scaleX(-1) scaleY(-1);
 }
 
 .text-wrapper {
@@ -7,16 +60,17 @@
 }
 
 .i-am-text {
-  color: var(--white);
+  color: var(--primarytext);
   text-align: center !important;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  margin-top: 4rem;
 }
 
 .i-am-text-title {
-  color: var(--primary) !important;
+  color: var(--secondary) !important;
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
 }
 
 .welcome-title-text-container {
@@ -28,7 +82,7 @@
 }
 
 .welcome-phone-container {
-  width: 45rem;
+  width: 50rem;
   height: auto;
   object-fit: contain;
   position: absolute;
@@ -43,8 +97,8 @@
 .welcome-phone {
   width: 100%;
   height: 100%;
-  -webkit-filter: drop-shadow(4px 4px 20px rgba(206, 89, 55, 0.4));
-  filter: drop-shadow(4px 4px 20px rgba(206, 89, 55, 0.4));
+  /* -webkit-filter: drop-shadow(4px 4px 20px rgba(206, 89, 55, 0.4)); */
+  /* filter: drop-shadow(4px 4px 20px rgba(206, 89, 55, 0.4)); */
   cursor: pointer;
 }
 
@@ -98,5 +152,25 @@
     position: absolute;
     margin: auto;
     top: 5.1rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .about-side-top-right,
+  .about-side-top-left,
+  .about-side-bottom-right,
+  .about-side-bottom-left {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 576px) {
+  .about-side-top-right,
+  .about-side-top-left,
+  .about-side-bottom-right,
+  .about-side-bottom-left {
+    width: 80px;
+    height: 80px;
   }
 }
