--- a/src/components/styles/WorkSection.module.css
+++ b/src/components/styles/WorkSection.module.css
@@ -1,7 +1,7 @@
 .my-work-header {
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
   font-size: 3rem;
   text-align: center;
 }
@@ -30,7 +30,7 @@
 
 .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23f4d2d3' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
 }
 
 .carousel-control-next-icon {
