--- a/src/components/styles/ci-calculator.module.css
+++ b/src/components/styles/ci-calculator.module.css
@@ -8,7 +8,7 @@
 .text-center {
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 1rem;
@@ -86,7 +86,7 @@
   text-align: center;
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
 }
 
 .summary-table {
@@ -124,7 +124,7 @@
   text-align: center;
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
   margin-bottom: 1rem;
 }
 
@@ -135,7 +135,7 @@
   margin-bottom: 1rem;
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
 }
 
 .summary-content {
