--- a/src/pages/styles/seyebot.module.css
+++ b/src/pages/styles/seyebot.module.css
@@ -12,7 +12,7 @@
 .seye-bot-graph-container > h1 {
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
   font-size: 3rem;
   text-align: center;
   margin-bottom: 2rem;
@@ -56,7 +56,7 @@
 .seye-bot-wrapper > h1 {
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
   font-size: 3rem;
   text-align: center;
   z-index: 1;
@@ -162,7 +162,7 @@
 .description-text-container > h1 {
   color: var(--primarytext);
   font-family: GothamBold;
-  text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 1rem;
@@ -202,7 +202,7 @@
   .guide-text-container > h1 {
     color: var(--primary);
     font-family: GothamBold;
-    text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5);
+    /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
     font-size: 1.5rem;
     text-align: center;
     margin-bottom: 1rem;
