--- a/src/components/styles/Header.module.css
+++ b/src/components/styles/Header.module.css
@@ -143,7 +143,7 @@
 .mobile-sidebar {
   height: 100vh;
   width: 100vw;
-  background-color: var(--black);
+  background-color: var(--primary);
   position: fixed;
   top: 0;
   z-index: 16;
