--- a/src/components/styles/LandingSection.module.css
+++ b/src/components/styles/LandingSection.module.css
@@ -1,58 +1,13 @@
 .welcome-container {
   background-color: var(--primary);
   background-image: url('../../../public/images/bg.png');
-  /* cursor: pointer; */
   background-size: cover;
   background-position: center;
-  padding-top: 145px;
-}
-
-.about-container {
-  background-color: var(--primary);
-  width: 100%;
-  padding: 3rem;
-  margin: auto;
+  padding-top: 100px;
+  height: 500px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
-}
-
-.about-side-top-right {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.about-side-top-left {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-
-.about-side-bottom-right {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  -webkit-transform: scaleY(-1);
-  transform: scaleY(-1);
-}
-
-.about-side-bottom-left {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  -webkit-transform: scaleX(-1) scaleY(-1);
-  transform: scaleX(-1) scaleY(-1);
 }
 
 .text-wrapper {
@@ -61,16 +16,14 @@
 
 .i-am-text {
   color: var(--primarytext);
-  text-align: center !important;
-  font-weight: 700;
-  font-size: 2.5rem;
-  margin-top: 4rem;
+  text-align: center;
+  font-size: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 
 .i-am-text-title {
-  color: var(--secondary) !important;
+  color: var(--secondary);
   font-family: GothamBold;
-  /* text-shadow: 4px 3px 3px rgba(206, 89, 55, 0.5); */
 }
 
 .welcome-title-text-container {
@@ -78,99 +31,31 @@
   align-items: center;
   width: 100%;
   display: flex;
-  padding: 8rem 0 17rem 0;
 }
 
 .welcome-phone-container {
-  width: 50rem;
-  height: auto;
+  width: 100%;
+  max-width: 50rem;
+  padding: 0 .5rem;
   object-fit: contain;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  left: 0;
-  right: 0;
-  margin-top: 7rem;
   z-index: 0;
 }
 
 .welcome-phone {
   width: 100%;
   height: 100%;
-  /* -webkit-filter: drop-shadow(4px 4px 20px rgba(206, 89, 55, 0.4)); */
-  /* filter: drop-shadow(4px 4px 20px rgba(206, 89, 55, 0.4)); */
-  cursor: pointer;
 }
 
-@media (max-width: 1200px) {
-  .welcome-phone-container {
-    width: 30rem;
-    margin-top: 5rem;
+
+@media (min-width: 768px) {
+  .welcome-container {
+    height: 800px;
   }
   .i-am-text {
-    font-size: 2rem;
-  }
-  .welcome-title-text-container {
-    padding: 8rem 0 14rem 0;
-  }
-}
-
-@media (max-width: 576px) {
-  .welcome-phone-container {
-    width: 20rem;
-    margin-top: 2rem;
-    top: 0;
-  }
-  .i-am-text {
-    font-size: 1rem;
-  }
-  .welcome-title-text-container {
-    padding: 8rem 0 10rem 0;
-    align-items: flex-start;
-  }
-  .text-wrapper {
-    position: absolute;
-    margin: auto;
-    top: 5.7rem;
-  }
-}
-
-@media (max-width: 319px) {
-  .welcome-phone-container {
-    width: 17rem;
-    margin-top: 2rem;
-    top: 0;
-  }
-  .i-am-text {
-    font-size: 1rem;
-  }
-  .welcome-title-text-container {
-    padding: 8rem 0 10rem 0;
-    align-items: flex-start;
-  }
-  .text-wrapper {
-    position: absolute;
-    margin: auto;
-    top: 5.1rem;
-  }
-}
-
-@media (max-width: 900px) {
-  .about-side-top-right,
-  .about-side-top-left,
-  .about-side-bottom-right,
-  .about-side-bottom-left {
-    width: 100px;
-    height: 100px;
-  }
-}
-
-@media (max-width: 576px) {
-  .about-side-top-right,
-  .about-side-top-left,
-  .about-side-bottom-right,
-  .about-side-bottom-left {
-    width: 80px;
-    height: 80px;
+    font-size: 2.5rem;
+    margin-bottom: 2.5rem;
   }
 }
