--- a/src/components/styles/About.module.css
+++ b/src/components/styles/About.module.css
@@ -23,7 +23,7 @@
 .about-header {
   color: var(--primary);
   font-family: GothamBold;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
   margin-top: 2rem;
 }
@@ -36,7 +36,7 @@
 }
 
 .about-right-content {
-  font-size: 1rem;
+  font-size: .8rem;
   line-height: 2;
   text-align: center;
   margin-top: 1rem;
@@ -109,8 +109,17 @@
   }
   .about-right-content {
     text-align: left;
+    font-size: 1rem;
   }
   .about-header {
     text-align: left;
+    font-size: 2.5rem;
   }
+  .about-container {
+    background-image: url('../../../public/images/bg-white-transparent.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  
 }
