--- a/src/components/styles/WorkSection.module.css
+++ b/src/components/styles/WorkSection.module.css
@@ -1,12 +1,12 @@
 .my-work-header {
-  color: var(--primarytext);
+  color: var(--primary);
   font-family: GothamBold;
   font-size: 3rem;
   text-align: center;
 }
 
 .work-container {
-  background-color: var(--primary);
+  background-color: var(--primarytext);
   width: 100%;
   padding-top: 3rem;
   padding-bottom: 3rem;
