--- a/src/pages/styles/PortfolioList.module.css
+++ b/src/pages/styles/PortfolioList.module.css
@@ -116,12 +116,12 @@
   .work-card-body {
     padding: 1rem 2rem 1rem;
   }
-  .work-card-phone {
+  /* .work-card-phone {
     height: 400px;
     width: 400px;
     top: 0.5rem;
     right: -4rem;
-  }
+  } */
   .work-card-image-container {
     width: 60%;
     margin-bottom: 2rem;
@@ -144,16 +144,19 @@
   .work-section {
     padding: 3rem 1rem;
   }
+  .work-card-phone {
+    display: none;
+  }
 }
 
-@media (max-width: 900px) {
+/* @media (max-width: 900px) {
   .work-card-phone {
     height: 350px;
     width: 350px;
     top: 0.5rem;
     right: -4rem;
   }
-}
+} */
 
 @media (max-width: 768px) {
   .work-card-phone {
@@ -193,7 +196,7 @@
   }
   .work-card-subtitle {
     width: 100%;
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     line-height: 1.3rem;
     text-align: justify;
     margin-top: 0.5rem;
@@ -204,7 +207,7 @@
     margin: auto;
   }
   .work-card-title {
-    font-size: 1rem;
+    font-size: 1.4rem;
   }
   .work-card-container {
     height: 370px;
@@ -214,17 +217,18 @@
     flex-direction: column;
   }
   .work-card-body {
-    padding: 0rem 1rem 1rem;
+    padding: 0rem;
   }
   .work-button-text {
     padding: 0.5rem 0.5rem;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
   .work-card-image-container {
-    width: 85%;
+    width: 100%;
     margin-bottom: -0.5rem;
     margin-right: 0rem;
     height: 200px;
+    right: 0;
   }
   .my-work-header {
     font-size: 1.5rem;
