--- a/src/components/styles/ProjectDetail.module.css
+++ b/src/components/styles/ProjectDetail.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 100px;
+  /* padding-top: 100px; */
 }
 
 .image-container {
