--- a/public/styles.css
+++ b/public/styles.css
@@ -33,7 +33,7 @@ section {
 body {
   margin: 0;
   font-size: 1.0625rem;
-  font-weight: 400;
+  /* font-weight: 400; */
   line-height: 1.6;
   color: #161c2d;
   text-align: left;
