--- a/src/components/styles/Footer.module.css
+++ b/src/components/styles/Footer.module.css
@@ -8,7 +8,7 @@
 
 .footer-text {
   color: var(--white);
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 14px;
   text-align: center;
 }
