--- a/src/components/styles/About.module.css
+++ b/src/components/styles/About.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  background-image: url('../../../public/images/bg-white-transparent-vertical.png');
+  background-image: url('/images/bg-white-transparent-vertical.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -116,7 +116,7 @@
     font-size: 2.5rem;
   }
   .about-container {
-    background-image: url('../../../public/images/bg-white-transparent.png');
+    background-image: url('/images/bg-white-transparent.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
